@@ -1,3 +1,11 @@
+2007-01-28  Francois Dumont  <dums@stlport...>
+
+	* stlport/stl/debug/_deque.h: Fix iterator invalidation in erase
+	of an iterator range thanks to Steve Lobasso indirect report (bug
+	1645657).
+
+	* test/unit/deque_test.cpp: New test case for deque erase methods.
+	
 2007-01-19  Francois Dumont  <dums@stlport...>
 
 	* stlport/stl/_locale.h, src/locale.cpp: Add throw() specification
